try to change style

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class=" fixed-top">
             <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-                <div class="container-fluid">
+                <div class="container-fluid ">
                     <h1>
                         <a class="navbar-brand" href="#">Scaffold</a>
                     </h1>
@@ -62,14 +62,12 @@
                 <a href=""> <i class="fa-brands fa-facebook"></i></a>
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin"></i></a>
-
-            </div>
-            
+            </div> 
         </div>
     </header>
 
     <main>
-        <section id="hero" class="hero">
+        <section id="hero" class="hero ">
             <div class="container">
                 <div class="row hero-sec-row">
                     <div class="col  hero-sec-title " data-aos="fade-up" data-aos-duration="2000">
